2005-12-17  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/plugin.rb (save): do not remove spaces from the begining
	and the end of texts (reported by ISOBE,
	Kazuhiko [Hiki-dev:01078]).

2005-12-02  Kazuhiko  <kazuhiko@fdiary.net>
	* contrib/plugin/rast-register.rb: add a new plugin.
	* contrib/plugin/rast-search.rb: add a new plugin.

2005-11-28  Kouhei Yanagita <yanagi@shakenbu.org>
	* hiki/config.rb (load): fixed: The XMLRPC feature could not be
	disabled (reported by Atsushi SHICHI).

2005-11-22  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/hikifarm/index.cgi: revise output HTML.

2005-11-19  Kouhei Yanagita <yanagi@shakenbu.org>
	* plugin/02help.rb, plugin/en/02help.rb, plugin/ja/02help.rb: refine
	the interface of editing support (by NAGASAKI).

2005-11-16  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/its.rb: add a 'Issue Tracking System' plugin.

2005-11-15  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/hikifarm/hiki.conf: add descriptions by Atsushi SHICHI.
	* doc/README-attach.txt: update a document by Atsushi SHICHI.

2005-11-07  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/amazon.rb (getAmazon): revise for recent amazon sites.

2005-11-03  Kouhei Yanagita <yanagi@shakenbu.org>
	* plugin/01sp.rb, misc/plugin/show_plugins.rb: new plugin.
	It displays enabled plugins.

2005-11-02  Kouhei Yanagita <yanagi@shakenbu.org>
	* hiki/command.rb (cmd_save): editors can delete pages without
	administrative privilege.

2005-11-01  Kouhei Yanagita <yanagi@shakenbu.org>
	* hiki/db/flatfile.rb (unlink): backup the data when a page is deleted.

2005-10-25  Kouhei Yanagita <yanagi@shakenbu.org>
	* style/rd+/rd2html.rb (a_name_href): fixed a escape string
	remaining bug (patch by Masao Mutoh).

2005-10-19  Kouhei Yanagita <yanagi@shakenbu.org>
	* hiki/repos/plain.rb, test/test_repos_plain.rb,
	misc/hikifarm/hikifarm.conf: add a new version control backend,
	which stores whole copy of each version.

2005-10-15  Kazuhiro NISHIYAMA <zn@mbf.nifty.com>
	* hiki/xmlrpc.rb: keyword bug fix.